# roaya

./: .gitignore  Jenkinsfile  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile  build_log.txt
backend/.cache/clangd/index/: auth_middleware.hpp.82DE6AE3B7D34D65.idx  auth_service.cpp.841A7C32A791016F.idx  auth_service.hpp.6BC6507924985197.idx  chat_handler.cpp.0253C1561C00C3FB.idx  chat_handler.hpp.1CA714912D35017A.idx  config.cpp.0883C37648DB5272.idx  config.hpp.CA8BB38451C18588.idx  http_server.cpp.534AD5108C69251F.idx  http_server.hpp.A05C9CC93A672F0D.idx  http_types.hpp.C795BD5BEB07AF74.idx  jwt_handler.cpp.52ED5188D8A19D8A.idx  jwt_handler.hpp.8A33DC824FE64319.idx  logger.cpp.C0A369DA22B84B1F.idx  logger.hpp.88517F2C2BD68526.idx  main.cpp.01B24842146A9199.idx  message_types.hpp.104FB27F0C7E68F5.idx  participant.cpp.00AB99ADB3347F08.idx  participant.hpp.C11E5123EA8B05D1.idx  password_hasher.cpp.3EF3D4FE1A6654B9.idx  password_hasher.hpp.36E86715E40CAFAA.idx  redis_client.cpp.0C8DD3ED073EE1D1.idx  redis_client.hpp.507ACE54FDA608D5.idx  room.cpp.5CA10E3CADA9755A.idx  room.hpp.06F1F8F2A405AB0E.idx  room_manager.cpp.4542525D189AEEDE.idx  room_manager.hpp.DA80EF430999AFE0.idx  server.cpp.A58E5F58CDF0C3F4.idx  server.hpp.48A10589B1DB01A7.idx  signaling_handler.cpp.2662EB4D90EF188D.idx  signaling_handler.hpp.2F1E0D554BAF2F49.idx  test_create_room.cpp.A5B78FD45D139D92.idx  test_join_room.cpp.C46E0A356DB91506.idx  test_main.cpp.6D634A65C20F1DA7.idx  test_room_controls.cpp.58E4B003AF1F275A.idx  test_webrtc_signaling.cpp.6B1ED6287C2270A0.idx  user_repository.cpp.95E6BD283B3E36C0.idx  user_repository.hpp.F22F00870919C6C8.idx  websocket_server.cpp.BA4B53BAD9C23351.idx  websocket_server.hpp.E84A1504A9B97010.idx
backend/config/: config.json
backend/scripts/migrations/: 001_initial_schema.sql  002_rooms_sessions_recordings.sql
backend/src/: main.cpp
backend/src/api/: http_server.cpp  http_server.hpp  http_types.hpp
backend/src/api/middleware/: auth_middleware.hpp
backend/src/api/routes/: auth_routes.hpp  room_routes.hpp  user_routes.hpp
backend/src/auth/: auth_service.cpp  auth_service.hpp  jwt_handler.cpp  jwt_handler.hpp  password_hasher.cpp  password_hasher.hpp
backend/src/chat/: chat_handler.cpp  chat_handler.hpp
backend/src/core/: config.cpp  config.hpp  logger.cpp  logger.hpp  server.cpp  server.hpp  signal_handler.cpp  signal_handler.hpp  spsc_queue.hpp  task_queue.hpp  worker_thread.cpp  worker_thread.hpp
backend/src/db/: postgres_client.cpp  postgres_client.hpp  redis_client.cpp  redis_client.hpp  user_repository.cpp  user_repository.hpp
backend/src/media/sfu/: sfu_manager.cpp  sfu_manager.hpp
backend/src/room/: participant.cpp  participant.hpp  room.cpp  room.hpp  room_manager.cpp  room_manager.hpp
backend/src/signaling/: message_types.hpp  signaling_handler.cpp  signaling_handler.hpp  websocket_server.cpp  websocket_server.hpp
backend/tests/integration/: test_auth_db.cpp
backend/tests/unit/: test_concurrency.cpp  test_create_room.cpp  test_join_room.cpp  test_participant.cpp  test_room_controls.cpp  test_sfu_manager.cpp  test_task_queue.cpp  test_webrtc_signaling.cpp  test_worker_thread.cpp
docs/: architecture_design.md  implementation_roadmap.md  system_diagram.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/__tests__/acceptance/: meeting-flow.test.ts
frontend/src/__tests__/unit/: RemoteControlChannel.test.ts  sfuBugFixes.test.ts  useSFUMedia.test.ts
frontend/src/components/Meeting/: ParticipantVideo.tsx  VideoGrid.tsx
frontend/src/components/common/: MediaErrorToast.tsx
frontend/src/hooks/: useActiveSpeaker.ts  useConnectionFSM.ts  useSFUMedia.ts
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  RoomPage.tsx
frontend/src/services/api/: auth.service.ts
frontend/src/services/media/: MediaClient.ts
frontend/src/services/signaling/: SignalingClient.ts
frontend/src/services/webrtc/: RemoteControlChannel.ts  WebRTCClient.ts
frontend/src/store/: useAuthStore.ts  useMediaStore.ts  useRoomStore.ts
frontend/src/styles/: index.css
frontend/src/types/: room.ts  signaling.ts
sfu/: Dockerfile  package-lock.json  package.json
sfu/src/: main.ts  mediasoup_manager.ts
